trying to fix some alignment issues 4.23.21 8:38

--- a/src/App.css
+++ b/src/App.css
@@ -82,8 +82,8 @@
   position: absolute;
   left: 10.9%;
   right: 81.25%;
-  top: 19.34%;
-  bottom: 67.09%;
+  top: 39.34%;
+  bottom: 57.09%;
 }
 .inputcard_container {
   display: flex;
@@ -92,6 +92,7 @@
   width: 40%;
   height: 40%;
   margin: auto;
+  margin-bottom: 100px;
 }
 
 .inputcard {
